<resources>
    <string name="app_name">Project ReConnect</string>

    <!-- Facebook API -->
    <string name="facebook_app_id">674378379421788</string>
    <string name="fb_login_protocol_scheme">fb674378379421788</string>

    <!-- Youtube API -->
    <string name="google_api_key">AIzaSyA0M6oFmhK_WeyNxvN9pI2IUy5056q7-2A</string>

    <!-- Strings related to login -->
    <string name="sign_up_label">Sign Up</string>
    <string name="with_label">with</string>

    <!-- Strings for signup page-->
    <string name="hi_message">Hello</string>
    <string name="welcome_message">We\'re so happy to have you!</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
   Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <!-- Labels for preference radio group -->
    <string name="preference_label">What are you interested in?</string>

    <string name="sports_label">Sports</string>
    <string name="music_label">Music</string>
    <string name="food_label">Food</string>
    <string name="culture_label">Culture</string>
    <string name="city_transportation_label">Transportation</string>
    <string name="language_label">Languages</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Labels for essays fragment -->
    <string name="about_me_label">About me</string>
    <string name="about_me_hint">A few words about myself</string>
    <string name="hope_label">Hope for the future</string>
    <string name="hope_hint">My hope for the future is&#8230;</string>
    <string name="integration_label">Define integration</string>
    <string name="integration_hint">For me integration means&#8230;</string>

    <!-- Labels for video fragment -->
    <string name="terms_label">TERMS &amp; CONDITIONS</string>
    <string name="terms_sentence">By clicking on \"Complete\", I agree with the terms and conditions</string>

    <!-- Strings for buttons -->
    <string name="button_complete">Complete</string>
    <string name="button_next">Next</string>

    <!--  Strings for Adding page -->
    <string name="button_reconnect">ReConnect</string>
    <string name="button_see_profile">See Profile</string>
    <string name="from_label">From</string>
    <string name="since_label">Member since</string>
    <string name="mutual_label">Mutual ReConnections</string>
    <string name="invitation_badge">Invitations</string>
    <string name="reconnection_badge">ReConnections</string>
    <string name="suggestion_badge">Find ReConnections</string>

    <!-- Strings for Profile Activity -->
    <string name="reference_badge">References</string>
    <string name="available_badge">Looking for ReConnections</string>
    <string name="verified_badge">Verified Member</string>
    <string name="phone_verified_badge">Phone</string>
    <string name="gov_id_verified_badge">Government ID</string>
    <string name="request_reconnection_banner">Invite to ReConnect</string>
    <string name="about_badge">ABOUT ME</string>
    <string name="integration_badge">FOR ME, INTEGRATION IS&#8230;</string>
    <string name="hope_badge">MY HOPE FOR THE FUTURE IS&#8230;</string>
    <string name="edit_profile_badge">Edit Profile</string>

    <!-- Chat Activity -->
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

</resources>
