<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goprojectreconnect.projectreconnect.Fragments.SignUpVideo">


    <TextView
        android:id="@+id/tvTermsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/terms_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <FrameLayout
        android:id="@+id/youtube_fragment"
        android:layout_below="@id/tvTermsLabel"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvTermSentence"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/terms_sentence"
        android:textAlignment="center"
        android:layout_below="@+id/youtube_fragment"
        android:layout_alignLeft="@+id/youtube_fragment"
        android:layout_alignStart="@+id/youtube_fragment" />

    <Button
        android:id="@+id/btComplete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTermSentence"
        android:layout_centerHorizontal="true"
        android:paddingLeft="64dp"
        android:paddingStart="64dp"
        android:paddingRight="64dp"
        android:paddingEnd="64dp"
        android:layout_marginTop="@dimen/element_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/button_complete" />


</RelativeLayout>
