<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goprojectreconnect.projectreconnect.Activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@color/black" />


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivProfilePicture"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="São Paulo, SP, Brazil"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/element_margin"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_above="@id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin"
            android:layout_alignStart="@+id/tvLocation"
            android:text="Gabriel Saruhashi"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <!-- Reference Section -->
        <RelativeLayout
            android:id="@+id/rlReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvLocation"
            android:layout_below="@+id/ivProfilePicture">
            <ImageView
                android:id="@+id/icReference"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_reference" />

            <TextView
                android:id="@+id/tvReferenceCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/icReference"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_toEndOf="@+id/icReference"
                android:textColor="@color/colorAccent"
                android:text="23" />

            <TextView
                android:id="@+id/tvReferenceBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/badge_margin"
                android:layout_alignBottom="@+id/tvReferenceCount"
                android:layout_toEndOf="@+id/tvReferenceCount"
                android:textColor="@color/colorAccent"
                android:text="@string/reference_badge"
                android:layout_alignTop="@+id/tvReferenceCount" />


            <ImageView
                android:id="@+id/icRightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/icReference"
                android:layout_marginEnd="@dimen/rv_margin_top"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_arrow_right" />

            <View
                android:layout_below="@id/icReference"
                android:layout_width="fill_parent"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                />
        </RelativeLayout>

        <!-- Availability -->
        <RelativeLayout
            android:id="@+id/rlAvailability"
            android:layout_alignStart="@id/rlReference"
            android:layout_below="@id/rlReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icAvailability"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_group_add" />

            <TextView
                android:id="@+id/tvAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/icAvailability"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_toEndOf="@+id/icAvailability"
                android:textStyle="bold"
                android:text="@string/available_badge" />

            <View
                android:layout_below="@id/icAvailability"
                android:layout_width="fill_parent"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                />

        </RelativeLayout>

        <!-- Verified Member -->

        <RelativeLayout
            android:id="@+id/rlVerified"
            android:layout_width="match_parent"
            android:layout_below="@id/rlAvailability"
            android:layout_alignStart="@id/rlAvailability"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icVerified"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_check" />

            <TextView
                android:id="@+id/tvVerified"
                android:layout_width="wrap_content"
                android:textColor="@color/green_normal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_toEndOf="@+id/icVerified"
                android:textStyle="bold"
                android:text="@string/verified_badge" />

            <View
                android:layout_below="@id/icVerified"
                android:layout_width="fill_parent"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                />

        </RelativeLayout>

        <!--Request ReConnection Banner -->
        <LinearLayout
            android:id="@+id/llRequestReConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlVerified"
            android:paddingTop="@dimen/element_margin"
            android:paddingBottom="@dimen/element_margin"
            android:background="@color/colorPrimaryDark">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvRequestBanner"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_badge"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEssays"
            android:layout_alignStart="@+id/rlVerified"
            android:layout_marginTop="@dimen/element_margin"
            android:layout_below="@id/llRequestReConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvAboutBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/about_badge" />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:layout_marginTop="@dimen/element_margin"
                android:id="@+id/tvHopeBadge"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/hope_badge"/>

            <TextView
                android:id="@+id/tvHope"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvIntegrationBadge"
                android:layout_marginTop="@dimen/element_margin"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/integration_badge" />

            <TextView
                android:id="@+id/tvIntegration"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
